# econ-tabletop

./: .gitignore  README.md  project_scope_draft.txt  pyproject.toml
generator/: pyproject.toml
generator/examples/configs/: baseline.yaml  uae.yaml
generator/src/deckgen/: __init__.py  cli.py  config.py  schemas.py
generator/src/deckgen/pipeline/: image_outline.py  images.py  outline.py  policies.py  print_export.py  render_cards.py  stages.py  taxonomy.py  validation.py
generator/src/deckgen/prompts/: development_card.jinja  development_cards.jinja  image_critique.jinja  image_outline.jinja  image_prompt_development.jinja  image_prompt_policy.jinja  policy_blueprint.jinja  policy_card.jinja  policy_cards.jinja  simulation_outline.jinja  stage_blueprint.jinja  stage_summary.jinja  taxonomy.jinja
generator/src/deckgen/utils/: asyncio_utils.py  cache.py  io.py  openai_client.py  parallel.py  prompts.py  text_similarity.py  utility_functions.py
generator/src/econ_tabletop/: __init__.py  notebook.py
generator/src/econ_tabletop/data/: __init__.py
generator/src/econ_tabletop/data/configs/: __init__.py  baseline.yaml  uae.yaml
generator/src/econ_tabletop/ui/: package-lock.json  package.json
generator/src/econ_tabletop/ui/server/: deckLoader.ts
generator/src/econ_tabletop/ui/web/: vite.config.ts
generator/src/econ_tabletop/ui/web/src/: App.tsx  styles.css
generator/src/econ_tabletop/ui/web/src/components/: Card.tsx  CardModal.tsx  DeckControls.tsx  PlayerHand.tsx  ScoreHud.tsx  Table.tsx
generator/tests/: test_pipeline_smoke.py
ui/server/: index.ts
(+15 files in other folders)
