[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deckgen"
version = "0.1.0"
description = "AI economy tabletop deck generator"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "jinja2>=3.1",
  "pydantic>=2.6",
  "jsonschema>=4.21",
  "rich>=13.7",
  "pillow>=10.2",
  "reportlab>=4.0",
  "tqdm>=4.66",
  "httpx>=0.26",
]

[project.scripts]
deckgen = "deckgen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
